--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,20 +3,49 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>登录</title>
-		<link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/bootstrap.css"/>
-		<script src="../js/jquery3.4.1.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css"/>
+		<script src="/js/jquery3.4.1.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
 		
 		<meta name="viewport" content="width=de1vice-width, initial-scale=1">
 	</head>
 	<body>
-		<div style="margin: 0 auto">
+		<div >
 			<form action="/login" method="post">
 				<label for="username">账号</label><input type="text" name="username" id="username" value=""/><br>
 				<label for="password">密码</label><input type="password" name="password" id="password" value=""/>
 				<button type="submit">登录</button>
 			</form>
 		</div>
+		<script type="text/javascript">
+            $(document).ready(function(){
+                clearCookie("user_token");
+            });
+            //设置cookie
+            function setCookie(cname, cvalue, exdays) {
+                var d = new Date();
+                d.setTime(d.getTime() + (exdays*24*60*60*1000));
+                var expires = "expires="+d.toUTCString();
+                document.cookie = cname + "=" + cvalue + "; " + expires;
+            }
+            //清除cookie
+            function clearCookie(name) {
+                setCookie(name, "", -1);
+            }
+
+            //获取cookie
+            function getCookie(cname) {
+                var name = cname + "=";
+                var ca = document.cookie.split(';');
+                for (var i = 0; i < ca.length; i++) {
+                    var c = ca[i];
+                    while (c.charAt(0) === ' ') c = c.substring(1);
+                    if (c.indexOf(name) !== -1) return c.substring(name.length, c.length);
+                }
+                return "";
+            }
+
+		</script>
 	</body>
 </html>
