fix build jar project couldn't find thmymeaf template.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 
 	<div th:include="leftMenu :: left"></div>
 		<div class="col-xs-10">
-            <table class="table">
+            <table class="table table-hover">
                 <tr>
                     <th>#</th>
                     <th>文件名称</th>
