--- a/src/main/resources/templates/leftMenu.html
+++ b/src/main/resources/templates/leftMenu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div th:fragment="left">
@@ -11,6 +12,7 @@
         首页
     </a>
     <a href="/file/upload" class="list-group-item">上传文件</a>
+    <a href="/user/find" class="list-group-item">添加好友</a>
 </div>
 </div>
 </body>
