--- a/src/main/resources/templates/fileUpload.html
+++ b/src/main/resources/templates/fileUpload.html
@@ -13,10 +13,12 @@
 <body>
 <div th:include="navigationBar :: navigation"></div>
 <div th:include="leftMenu :: left"></div>
-
-<form action="/file/upload" method="post" enctype="multipart/form-data">
-    <label for="file"></label><input type="file" id="file" name="file">
-    <button type="submit">上传</button>
-</form>
+<div class="col-xs-1"></div>
+<div class="col-xs-8">
+    <form action="/file/upload" method="post" enctype="multipart/form-data">
+        <label for="file"></label><input type="file" id="file" name="file"><br/>
+        <button type="submit" class="btn btn-default">上传</button>
+    </form>
+</div><div class="col-xs-1"></div>
 </body>
 </html>
