--- a/src/main/resources/templates/share/download.html
+++ b/src/main/resources/templates/share/download.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"/>
     <script src="/js/jquery3.4.1.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <form th:action="@{/share/download/}" method="post">
-    <a th:text="${file.originalFilename}"></a><br/>
+    <span th:text="${file.originalFilename}"></span><br/>
     <input type="hidden" name="fileId" th:value="${file.id}">
     <input type="text" name="sharePassword"><br/>
-    <button type="submit">下载</button>
+    <button type="submit" class="btn btn-default">下载</button>
 </form>
 </body>
 </html>
